Prevent dropdown page overflow

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -3,3 +3,8 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.ant-dropdown {
+  max-height: 100vh;
+  overflow-y: auto;
+}
